deploy-repo/environments/dev/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-blue
spec:
  template:
    spec:
      containers:
        - name: my-app
          image: myrepo/myapp:dev-latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-green
spec:
  template:
    spec:
      containers:
        - name: my-app
          image: myrepo/myapp:dev-latest
