deploy-repo/environments/dev/traffic.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-active
spec:
  selector:
    app: my-app
    color: blue
  ports:
    - port: 80
      targetPort: 8080
